# OpenPP_old

./: .gitignore
Sources/: CMakeLists.txt  LibreppConfig.txt  OpenppConfig.txt
Sources/AutomaticTesting/: CMakeLists.txt
Sources/AutomaticTesting/FailTest/: CMakeLists.txt  main.cpp
Sources/AutomaticTesting/SuccessTest/: CMakeLists.txt  main.cpp
Sources/AutomaticTesting/TestApplication/: CMakeLists.txt  Commands.h  main.cpp
Sources/AutomaticTesting/TestApplication/Gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Sources/AutomaticTesting/TestApplication/Testing/: TesterThread.cpp  TesterThread.h
Sources/Playground/AI/NeuralNetworks1/: main.cpp
Sources/Playground/AI/NeuralNetworks2/: main.cpp
Sources/Playground/AI/NeuralNetworks2-build/: CMakeCache.txt  Makefile  PlaygroundAINeuralNetworks2.cbp  cmake_install.cmake
Sources/Playground/AI/NeuralNetworks3/: main.cpp
Sources/Playground/AI/NeuralNetworks3-build/: CMakeCache.txt  Makefile  PlaygroundAINeuralNetworks3.cbp  cmake_install.cmake
Sources/Playground/AI/NeuralNetworks4/: main.cpp
Sources/Playground/AI/NeuralNetworks5/: CMakeLists.txt  main.cpp
Sources/Playground/AI/NeuralNetworks5.1/: CMakeLists.txt  Layer.h  NeuralNetwork.h  Neuron.h  main.cpp
Sources/Playground/AI/NeuralNetworks5.2.0/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
Sources/Playground/BigNumbers/Test1/: IntString.cpp  IntString.hpp  main.cpp
Sources/Playground/BigNumbers/Test2/: main.cpp
Sources/Playground/Calculator/Test1/: CMakeLists.txt  main.cpp
Sources/Playground/CastingTest/Test1/: main.cpp
Sources/Playground/CircularList/Test1/: CMakeLists.txt  CircularList.cpp  CircularList.hpp  main.cpp
Sources/Playground/ClassTest/Test1/: main.cpp
Sources/Playground/ClassTest/Test2/: main.cpp
Sources/Playground/ClassTest/Test4/: main.cpp
Sources/Playground/ClassTest/test3/: CMakeLists.txt  main.cpp
Sources/Playground/ClassTypeTest/Test1/: main.cpp
Sources/Playground/CplusplusQuestions/Test1/: main.cpp
Sources/Playground/CplusplusQuestions/Test10/: main.cpp
Sources/Playground/CplusplusQuestions/Test2/: CMakeLists.txt  main.cpp
Sources/Playground/CplusplusQuestions/Test3/: main.cpp
Sources/Playground/Enum/Test1/: main.cpp
Sources/Playground/LSDL2Test/Test1/Media/: CMakeLists.txt
Sources/Playground/Pointers/: CMakeLists.txt
Sources/Playground/SDL2Test/Test1/: CMakeLists.txt  main.cpp
Sources/Playground/SDL2Test/Test1/Game/: CMakeLists.txt  Globals.h  Globals.inl  Init.inl
Sources/Projects/: CMakeLists.txt
Sources/Projects/Calculator/Calculator1/: CMakeLists.txt  main.cpp
Sources/Projects/GelisProject/Core/: Input.cpp  Input.h  RaspIO.h
Sources/Projects/GelisProject/Test1/: CMakeLists.txt  bodywrapper.h  game.cpp  game.h  main.cpp  pause.cpp  pause.h  physics.cpp  physics.h  player.h  textures.psd  triangles.psd
Sources/Projects/GelisProject/Test2/: CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  Globals.cpp  Globals.h  PauseState.cpp  PauseState.h  World.cpp  World.h  main.cpp
Sources/Projects/Thesis/: CMakeLists.txt
Sources/Projects/Thesis/Core/: Button.cpp  Button.h  CMakeLists.txt  Globals.cpp  Globals.h  Input.cpp  Input.h  Input.inl  Logger.cpp  Logger.h  RaspIO.cpp  RaspIO.h  Rectangle.h  Rectangle.inl  SDL_Rectangle.cpp  SDL_Rectangle.h  Screen.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
Sources/Projects/Thesis/Core/Exceptions/: ExFileError.cpp  ExFileError.h  ExSDLError.cpp  ExSDLError.h
Sources/Projects/Thesis/Core/Math/: Vector2.h  Vector2.inl
Sources/Projects/Thesis/SuperStacker6/: CMakeLists.txt  Log.txt  Makefile  main.cpp
Sources/Projects/Thesis/SuperStacker6/Game/: Data.cpp  Data.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  Globals.cpp  Globals.h  Init.cpp  Init.h  LevelScreen.cpp  LevelScreen.h  LostScreen.cpp  LostScreen.h  StartScreen.cpp  StartScreen.h  WinScreen.cpp  WinScreen.h
Sources/Projects/Thesis/SuperStacker6/Levels/: Level 1.lvl  Level 2.lvl  Level 3.lvl  Level 5.lvl
Sources/Projects/Thesis/SuperStacker6/Trash/: Data.cpp  Data.h
Sources/Projects/TicTacToe_AI/: CMakeLists.txt  TicTacToe.h
Sources/Projects/TicTacToe_AI/Gui/: GameWidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sources/Projects/TicTacToe_AI/Test1/: CMakeLists.txt  TicTacToe.cpp  TicTacToe.h  Tree.h  main.cpp
Sources/Projects/TicTacToe_AI/Test1/Gui/: GameWidget.cpp  GameWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sources/Projects/TicTacToe_AI/Test2/: AI.cpp  AI.h  CMakeLists.txt  Game.cpp  Game.h  Tree.h  main.cpp
Sources/Projects/TicTacToe_AI/Test2/Gui/: GameWidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sources/Projects/TilemapEditor/Test1/: CMakeLists.txt  Globals.cpp  Globals.hpp  Initialize.hpp  main.cpp
Sources/Projects/TilemapEditor/Test1/Editor/: CMakeLists.txt  Editor.hpp  EditorGui.hpp
Sources/Projects/TilemapEditor/Test1/Editor/Screens/: Screens.hpp  StartScreen.cpp  StartScreen.hpp
Sources/include/Audio/: RingBuffer.h  RingBuffer.inl
Sources/include/Container/: Tree.h
Sources/include/Objects/: IScreen.hpp  LObject.hpp  OObject.hpp
Sources/include/Objects/2D/SDL2/: AScreen.hpp  Button.cpp  Button.hpp  Button.inl  CMakeLists.txt  Globals.cpp  Globals.hpp  Globals.inl  SDL_Rectangle.hpp  SDL_Rectangle.inl  SDL_Rectangle.tpp  Screen.hpp  Screen.inl  Sprite.hpp  Sprite.inl  Sprite.tpp  Text.cpp  Text.hpp  Text.inl  Texture.cpp  Texture.hpp  Texture.inl
Sources/include/Objects/2D/SDL2/Exceptions/: ExFileError.cpp  ExFileError.hpp  ExFileError.inl  ExSDLError.cpp  ExSDLError.hpp  ExSDLError.inl
Sources/include/Objects/2D/SDL2/Properties/: Text.cpp  Text.hpp  Text.inl  Texture.cpp  Texture.hpp  Texture.inl
Sources/include/Timer/: Timer.h  Timer.hpp  Timer.inl
Sources/include/Utility/: CMakeLists.txt  Char.h  Char.inl  Logger.hpp  Logger.inl  String.hpp  String.inl
Sources/include/Utility/Test/: CMakeLists.txt  Char.h  String.h  main.cpp
Sources/include/std/: CMakeLists.txt  String.hpp  String.tpp  string
Sources/include/types/: CMakeLists.txt  String.hpp  string
(+97 files in other folders)
